changed form color and global css background.

--- a/src/app/app/user-form/user-form.component.html
+++ b/src/app/app/user-form/user-form.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper" class="container">
 
-    <form #form="ngForm" ngNativeValidate class="rounded-lg bg-light p-5">
+    <form #form="ngForm" ngNativeValidate class="rounded-lg p-5">
         <h3 class="text-secondary">User Form</h3>
 
         <div class="form-group">
